--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="game-score">
-            1500 pts
+           <span class="points">0</span> pts.
         </div>
 
         <div class="game-area">
